--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
   <script>
     $(function(){
       $("#loginForm").validate({
-        rules:{username:{required:true,minlength:3},password:{required:true,minlength:3}},
+        rules:{username:{required:true,minlength:3},password:{required:true,minlength:5}},
         messages:{
-          username:{required:"Username required",minlength:"At least 3 chars"},
-          password:{required:"Password required",minlength:"At least 3 chars"}
+          username:{required:"Username required",minlength:"Atleast 3 characters"},
+          password:{required:"Password required",minlength:"Atleast 5 characters"}
         },
         submitHandler:function(form,e){
           e.preventDefault();
